--- a/index.html
+++ b/index.html
@@ -36,100 +36,100 @@
 
             <div>
                 <table border="1">
-                    <caption><h2 style="text-align:center;">Preference Test</h2></caption>
+                    <caption><h2 style="text-align:center;">CMOS Test</h2></caption>
                     
                     <tr>
-                        <th>A</th>
+                        <th>Reference</th>
                         <th>(ID) Text</th>
-                        <th>B</th>
+                        <th>Target</th>
                     </tr>
                     <tr>
                         <td>
                             <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab1_A_kn30_align_hifi.wav" type="audio/wav"></audio>
+                                <audio controls><source src="wavs/c1_kn30_ref.wav" type="audio/wav"></audio>
                             </div>
                         </td>
                         <td>
-                            <h4>(01) সব খেলার সব সুবিধাকে একটি খেলায় যেভাবে কেন্দ্রীভূত করা হয়েছে, এর সামগ্রিক ফলাফলটা আসলে কি আসছে?</h4>
+                            <h4>(01) ডিজেলসহ অন্যান্য জ্বালানির দাম বাড়বে অচিরেই।</h4>
                         </td>
                         <td>
                             <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab1_B_ad18_align_hifi.wav" type="audio/wav"></audio>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab2_A_kn30_align_hifi.wav" type="audio/wav"></audio>
-                            </div>
-                        </td>
-                        <td>
-                            <h4>(02) এ ভাষণ যেন জাদুর স্পর্শে বাঙালি জাতিকে বীরের জাতিতে রূপান্তরিত করেছে।</h4>
-                        </td>
-                        <td>
-                            <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab2_B_al12_fp_hifi.wav" type="audio/wav"></audio>
+                                <audio controls><source src="wavs/c1_kn30_align_hifi.wav" type="audio/wav"></audio>
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab3_A_ad18_align_hifi.wav" type="audio/wav"></audio>
+                                <audio controls><source src="wavs/c2_ad18_ref.wav" type="audio/wav"></audio>
                             </div>
                         </td>
                         <td>
-                            <h4>(03) পৃথিবীতে এমন কী আছে যে এখানে জীবেরা বাস করতে পারে?</h4>
+                            <h4>(02) তাই এই গান আর মনের মাঝে ভালোবাসার ফল্গুধারা বইয়ে দেয় না।</h4>
                         </td>
                         <td>
                             <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab3_B_kn30_align_hifi.wav" type="audio/wav"></audio>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab4_A_al12_fp_hifi.wav" type="audio/wav"></audio>
-                            </div>
-                        </td>
-                        <td>
-                            <h4>(04) বাংলাদেশ জাতীয় দল তিন সংস্করণেই বেশ কিছুদিন চলেছে সহঅধিনায়ক ছাড়া।</h4>
-                        </td>
-                        <td>
-                            <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab4_B_ad18_align_hifi.wav" type="audio/wav"></audio>
+                                <audio controls><source src="wavs/c2_ad18_align_hifi.wav" type="audio/wav"></audio>
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab5_A_al12_fp_hifi.wav" type="audio/wav"></audio>
+                                <audio controls><source src="wavs/c3_al12_ref.wav" type="audio/wav"></audio>
                             </div>
                         </td>
                         <td>
-                            <h4>(05) একাই আটজনের সঙ্গে একই সময়ে দাবা খেলেছেন তিনি।</h4>
+                            <h4>(03) কারণ বছর সাতেক আগেই তো রেফারিং থেকে অবসর নিয়েছেন তিনি।</h4>
                         </td>
                         <td>
                             <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab5_B_kn30_align_hifi.wav" type="audio/wav"></audio>
+                                <audio controls><source src="wavs/c3_al12_fp_hifi.wav" type="audio/wav"></audio>
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab6_A_ad18_align_hifi.wav" type="audio/wav"></audio>
+                                <audio controls><source src="wavs/c4_kn30_ref.wav" type="audio/wav"></audio>
                             </div>
                         </td>
                         <td>
-                            <h4>(06) দেশের ছবিকে আটকে রেখে কী লাভ, যখন পাশের দেশেই একই বিষয়ে ছবি বানানো হচ্ছে?</h4>
+                            <h4>(04) চালাক আর বুদ্ধিমান এক নয়, এটা জানো তো?</h4>
                         </td>
                         <td>
                             <div style="text-align: center;">
-                                <audio controls><source src="wavs/ab6_B_al12_fp_hifi.wav" type="audio/wav"></audio>
+                                <audio controls><source src="wavs/c4_kn30_align_hifi.wav" type="audio/wav"></audio>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div style="text-align: center;">
+                                <audio controls><source src="wavs/c5_ad18_ref.wav" type="audio/wav"></audio>
+                            </div>
+                        </td>
+                        <td>
+                            <h4>(05) তার আগে আনুষ্ঠানিকভাবে ঘোষণা দেওয়া হবে।</h4>
+                        </td>
+                        <td>
+                            <div style="text-align: center;">
+                                <audio controls><source src="wavs/c5_ad18_align_hifi.wav" type="audio/wav"></audio>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div style="text-align: center;">
+                                <audio controls><source src="wavs/c6_al12_ref.wav" type="audio/wav"></audio>
+                            </div>
+                        </td>
+                        <td>
+                            <h4>(06) আমাদের সমস্যা আমাদেরই সমাধান করতে হবে।</h4>
+                        </td>
+                        <td>
+                            <div style="text-align: center;">
+                                <audio controls><source src="wavs/c6_al12_fp_hifi.wav" type="audio/wav"></audio>
                             </div>
                         </td>
                     </tr>
